# myidea

./: .eslintrc.cjs  .gitignore  README.md  index.html  juno.config.mjs  juno.dev.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
.github/workflows/: deploy.yaml
src/: App.jsx  App.module.css  providers.js  satellite.js  util.js
src/components/: Auth.jsx  Backdrop.jsx  Background.jsx  Button.jsx  Cast.jsx  Delete.jsx  Download.jsx  Footer.jsx  Login.jsx  Logout.jsx  MainView.jsx  Modal.jsx  Network.jsx  Table.jsx  View.jsx
src/satellite/: Cargo.toml  satellite_extension.did
src/satellite/src/: lib.rs
