[package]
name = "satellite"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.2"
ic-cdk = "0.14.0"
ic-cdk-macros = "0.14.0"
serde = "1.0.190"
serde_cbor = "0.11.2"
junobuild-satellite = "0.0.18"
junobuild-macros = "0.0.2"
junobuild-utils = "0.0.1"
hex = "0.4.3"
sha2 = "0.10.6"
k256 = { version = "0.12.0", features = ["ecdsa"] }
# Enable `custom` feature of k256's getrandom dependency. See lib.rs for more details.
getrandom = { version = "0.2", features = ["custom"] }